Admin Panel Intergration, UI Enhacemennt, Final commit

--- a/leaverequest/src/LeaveRequest/LeaveRequest.css
+++ b/leaverequest/src/LeaveRequest/LeaveRequest.css
@@ -93,3 +93,68 @@
     animation: fadeIn 1s forwards; /* Remove fadeOut animation */
   }
   
+  .Admin {
+    max-width: 600px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #f4f4f4;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .Header-Text {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+  
+  .Admin h1 {
+    font-size: 24px;
+    color: #000;
+  }
+  
+  .buttongreen, .buttonred {
+    margin-top: 20px;
+  }
+  
+  button {
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+  }
+  
+  .buttongreen button {
+    background-color: #4caf50;
+    color: #fff;
+    margin-right: 10px; /* Add margin to create space between buttons */
+  }
+  
+  .buttonred button {
+    background-color: #f44336;
+    color: #fff;
+  }
+  
+  .buttonred button:hover, .buttongreen button:hover {
+    opacity: 0.9;
+  }
+  .Admin .button-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 20px;
+  }
+  
+  .buttongreen button,
+  .buttonred button {
+    flex: 1;
+    margin: 0 5px;
+  }
